--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.0",
     "@react-three/fiber": "^8.16.8",
     "@tabler/icons-react": "^3.11.0",
     "clsx": "^2.1.1",
